@@ -1,17 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" ?>
-<Deployment:Domain
- xmlns:Deployment="http://www.omg.org/Deployment"
- xmlns:xmi="http://www.omg.org/XMI"
- xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
- xsi:schemaLocation="http://www.omg.org/Deployment Deployment.xsd">
-<label>Hello Domain</label>
-<UUID>effd4bd0-6db0-4c50-9bb7-db9decebae1c</UUID>
-<node>
-  <name>Sender</name>
-  <label>Sender's Node</label>
-</node>
-<node>
-  <name>Receiver</name>
-  <label>Receiver's Node</label>
-</node>
-</Deployment:Domain>
