@@ -1,10 +1,0 @@
-<?xml version="1.0" encoding="UTF-8" standalone="no" ?>
-<Deployment:PackageConfiguration
-xmlns:Deployment="http://www.omg.org/Deployment"
-xmlns:xmi="http://www.omg.org/XMI"
-xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
-xsi:schemaLocation="http://www.omg.org/Deployment Deployment.xsd">
-  <label>Hello Example Configuration for Unix machines</label>
-  <UUID>559d65e8-0407-48c0-a158-dafe21360fef</UUID>
-  <basePackage href="Hello.cpd"/>
-</Deployment:PackageConfiguration>
