@@ -1,9 +1,0 @@
-# $Id$
-#
-# Please see $TAO_ROOT/docs/Options.html for details on these options.
-#
-
-static Advanced_Resource_Factory "-ORBReactorType select_st -ORBInputCDRAllocator null -ORBConnectionCacheLock null -ORBFlushingStrategy blocking"
-static Client_Strategy_Factory "-ORBClientConnectionHandler RW"
-static Server_Strategy_Factory "-ORBConcurrency thread-per-connection -ORBAllowReactivationOfSystemids 0"
-
